--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="./astronomy_logo.png" alt="NASA Astronomy Logo">
-            <h1>NASA ASTRONOMY</h1>
-        </div>
+            <div class="logo">
+                <img src="./astronomy_logo.png" alt="NASA Astronomy Logo">
+                <h1><a href="#">NASA ASTRONOMY</a></h1>
+            </div>
+        
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -50,12 +51,12 @@
         <section id="login">
             <h2>Login</h2>
             <p>Please log in to access additional features and personalized content.</p>
-            <button>Login</button>
+            <button class="loginBtn">Login</button>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 NASA Astronomy Website. All rights reserved.</p>
-        <p>Developed by Asmita Mandal. For more information, visit <a href="https://api.nasa.gov">NASA API Portal</a>.</p>
+        <p>Developed by Asmita Mandal. For more information, visit <a href="https://api.nasa.gov" target="_blank">NASA API Portal</a>.</p>
     </footer>
 
 <script src="scripts.js"></script>
